feat: add clean endpoint
